bug report: css load not triggerd

--- a/packages/playground/public/index.css
+++ b/packages/playground/public/index.css
@@ -7922,3 +7922,8 @@ code {
     color: #831843;
   }
 }
+
+/* _raw:/Users/admin/github/neo/packages/playground/src/examples/style.css */
+text {
+  color: red;
+}
